--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
     </section>
 
     <!-- banner section  -->
-    <section class="banner">
-        <!-- left nav menu  -->
+    <section class="banner ">
+        <!-- nav menu section  -->
         <div class="mx-5 d-flex align-items-center justify-content-between ">
+            <!-- left nav menu  -->
             <div class="d-flex py-5 align-items-center gap-2">
                 <img src="./assets/icon.svg" alt="">
                 <span class="title">Unique E School</span>
@@ -118,6 +119,61 @@
                     </div>
                   </nav>
             </div>
+        </div>
+
+        <!-- hero section  -->
+        <div class="mx-5 d-flex justify-content-between align-items-start "> 
+            <div class="hero-content mt-5">
+                <h3><span>Studying</span> Online is now <br> much easier</h3>
+                <p>Unique E School is an interesting platform that 
+                    <br> will teach you in more an interactive way</p>
+                <div class="d-flex align-items-center gap-4">
+                    <button class="heroButton">Join for free</button>                   
+                    <span class="play">
+                        <i class="fa-solid fa-play fa-xs" style="color: #23bdee;"></i>
+                    </span>
+                    <p  class="heroText">Watch How it works</p>                   
+
+                </div>
+            </div>
+            <div>
+                <img src="./assets/hero img.png" alt="" class="heroImg">
+            </div>
+        </div>
+    </section>
+
+    <!-- Join now section  -->
+    <section class="join-section ">
+        <h3 class="">Embrace Excellence: Join Now!</h3>
+        <div class="success-section d-flex justify-content-between my-5">
+            <div class="success-contents">
+                <h2>15K+</h2>
+                <p>Students</p>
+            </div>
+            <div class="success-contents">
+                <h2>75%</h2>
+                <p>Total success</p>
+            </div>
+            <div class="success-contents">
+                <h2>35</h2>
+                <p>App Download</p>
+            </div>
+            <div class="success-contents">
+                <h2>26</h2>
+                <p>Chief experts</p>
+            </div>
+            <div class="success-contents">
+                <h2>16</h2>
+                <p>Years of experience</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- favorite courses section  -->
+
+    <section class="fav-courses">
+        <div class="mx-5 ">
+            <h3>Choice favourite course from top category</h3>
         </div>
     </section>
 
