--- a/index.html
+++ b/index.html
@@ -23,15 +23,10 @@
     <section class="my-3  mx-5">
       <div class="d-flex align-items-center justify-content-between  flex-wrap">
         <div class="d-flex align-items-center">
-          <i class="fa-solid fa-envelope"></i>
+          <img src="./assets/email.png" alt="" class="email-icon">
           <span>uniqueeschool@gmail.com</span>
         </div>
-        <div class="d-flex justify-content-between gap-3">
-          <!-- <i class="fa-brands fa-facebook-f fa-1.5x" ></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-youtube"></i>
-          <i class="fa-brands fa-whatsapp"></i> -->
+        <div class="d-flex justify-content-between gap-3"> 
           <img src="./assets/Facebook.png" alt="" />
           <img src="./assets/Instagram.png" alt="" />
           <img src="./assets/LinkedIn.png" alt="" />
@@ -173,7 +168,73 @@
 
     <section class="fav-courses">
         <div class="mx-5 ">
-            <h3>Choice favourite course from top category</h3>
+            <h3 class="">Choice favourite course from top category</h3>
+            <div class="d-flex flex-wrap gap-3 justify-content-between pb-5">
+                <div class="course-cards">
+                    <img src="./assets/courses/ssc.png" alt="" id="ssc">
+                    <h4>SSC</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                         adipiscing elit, <br> sed do eiusmodadipiscing elit, <br>
+                         sed do eiusmod
+                    </p>
+                </div>
+                <div class="course-cards">
+                    <img src="./assets/courses/HSC.png" alt="" id="hsc">
+                    <h4>HSC</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                         adipiscing elit, <br> sed do eiusmodadipiscing elit, <br>
+                         sed do eiusmod
+                    </p>
+                </div>
+                <div class="course-cards">
+                    <img src="./assets/courses/honors.png" alt="" id="honors">
+                    <h4>Honors</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                         adipiscing elit, <br> sed do eiusmodadipiscing elit, <br>
+                         sed do eiusmod
+                    </p>
+                </div>
+                <div class="course-cards">
+                    <img src="./assets/courses/Admission.png" alt="" id="admission">
+                    <h4>Admission</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                         adipiscing elit, <br> sed do eiusmodadipiscing elit, <br>
+                         sed do eiusmod
+                    </p>
+                </div>
+                <div class="course-cards">
+                    <img src="./assets/courses/Job.png" alt="" id="job">
+                    <h4>Job</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                         adipiscing elit, <br> sed do eiusmodadipiscing elit, <br>
+                         sed do eiusmod
+                    </p>
+                </div>
+                <div class="course-cards">
+                    <img src="./assets/courses/Books.png" alt="" id="books">
+                    <h4>Books</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                         adipiscing elit, <br> sed do eiusmodadipiscing elit, <br>
+                         sed do eiusmod
+                    </p>
+                </div>
+                <div class="course-cards">
+                    <img src="./assets/courses/Courses.png" alt="" id="courses">
+                    <h4>Courses</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                         adipiscing elit, <br> sed do eiusmodadipiscing elit, <br>
+                         sed do eiusmod
+                    </p>
+                </div>
+                <div class="course-cards">
+                    <img src="./assets/courses/Exam.png" alt="" id="exam">
+                    <h4>Exam</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur
+                         adipiscing elit, <br> sed do eiusmodadipiscing elit, <br>
+                         sed do eiusmod
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
